# Big-Data-Term-Project

./: .gitignore  README.md  devenv.nix  main.py  main.typ  pyproject.toml  refs.bib
notebook/: main.py
